examples/test/testpolicy6838.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6838
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key19: value1
      key34: value39
      key35: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value47
      podSelector:
        matchLabels:
          key25: value39
          key33: value8
          key0: value10
